# Legend-of-PSU

./: Cargo.toml  README.md  STRUCTURE.md
src/: lib.rs  main.rs
src/engine/: mod.rs
src/engine/graphics/: mod.rs  renderer.rs  texture.rs  vertex.rs
src/engine/input/: handler.rs  mod.rs
src/engine/shaders/: shader.wgsl
src/engine/window/: manager.rs  mod.rs
src/game/: mod.rs
src/game/player/: mod.rs  player.rs
src/game/state/: game_state.rs  mod.rs
src/game/world/: app.rs  chunk.rs  chunk_manager.rs  mod.rs
src/graphics/: renderer.rs  texture.rs  vertex.rs
src/scene/: app.rs  camera.rs  chunk.rs  chunk_manager.rs
src/shaders/: mod.rs  shader.wgsl
